--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,14 +11,14 @@
                                 </div>
                                 <h6 class="h5 mb-0">Chào mừng trở lại!</h6>
                                 <p class="text-muted mt-2 mb-5">Điền email và mật khẩu để vào giao diện quản lý các phân hệ cán bộ.</p>
-                                <form>
+                                <form action="/auth" method="post" enctype="application/x-www-form-urlencoded">
                                     <div class="form-group">
                                         <label for="exampleInputEmail1">Email</label>
-                                        <input type="email" class="form-control" id="exampleInputEmail1">
+                                        <input type="email" class="form-control" id="exampleInputEmail1" name="email">
                                     </div>
                                     <div class="form-group mb-5">
                                         <label for="exampleInputPassword1">Mật khẩu</label>
-                                        <input type="password" class="form-control" id="exampleInputPassword1">
+                                        <input type="password" class="form-control" id="exampleInputPassword1" name="password">
                                     </div>
                                     <button type="submit" class="btn btn-theme">Đăng nhập</button>
                                     <a href="#l" class="forgot-link float-right text-primary">Quên mật khẩu?</a>
